--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 .text_1 {
   animation-name: anim-1;
-  animation-duration: 0.5s;
+  animation-duration: 1.5s;
 }
 
 @keyframes anim-1 {
@@ -15,7 +15,29 @@
     transform: translateX(-3000px);
   }
 
+  50% {
+    transform: translateX(200px);
+  }
+
   100% {
     transform: translateX(0);
+  }
+}
+
+.text_2 {
+  animation-name: anim-2;
+  animation-delay: 3s;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes anim-2 {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(2);
   }
 }
