--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,9 @@
 
 .text_2 {
   animation-name: anim-2;
-  animation-delay: 3s;
+  animation-delay: 2s;
   animation-duration: 2s;
-  animation-iteration-count: infinite;
+  animation-iteration-count: 2;
   animation-direction: alternate;
 }
 
@@ -39,5 +39,40 @@
 
   100% {
     transform: scale(2);
+  }
+}
+
+.text_3 {
+  opacity: 0;
+  margin-top: 100px;
+  animation-name: anim-3;
+  animation-delay: 3s;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+}
+
+@keyframes anim-3 {
+  0% {
+    transform: translateY(-3000px);
+  }
+
+  70% {
+    opacity: 1;
+    transform: translateY(50px);
+  }
+
+  80% {
+    opacity: 1;
+    transform: translateY(-20px);
+  }
+
+  90% {
+    opacity: 1;
+    transform: translateY(5px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
